Hilt, Rest calls, UI and VM, RoomDB, UI, RV, MVVM, Flows,Done

--- a/app/src/main/res/layout/school_item.xml
+++ b/app/src/main/res/layout/school_item.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
+            android:textSize="18sp"
             android:text="@string/students_count_lbl"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -56,6 +57,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:maxLength="32"
             android:breakStrategy="simple"
             android:text="@string/school_name"
             app:layout_constraintEnd_toEndOf="parent"
